--- a/template/addExpense.hbs
+++ b/template/addExpense.hbs
@@ -57,10 +57,11 @@
         
     </style>
 </head>
-<body id="body" style="display:none;">
+<body>
     <h1>Add Expense</h1>
     <button onclick="window.location.href='/logout'">Logout</button>
     <button onclick="window.location.href='/home'">home</button>
+
     <form id="expenseForm" style="display:block;">
         <div class="form-group">
             <label for="amount">Amount:</label>
