"changes in appConfig production vs deployment"

--- a/template/fetchExpense.hbs
+++ b/template/fetchExpense.hbs
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-    <div id="expense-list" style="display:block;">
-        <table>
+   <div id="expense-list" style="display: block; width: 60%; margin: 0 auto;">
+    <table style="width: 100%;">
             <thead>
                 <tr>
                     <th>Amount</th>
