--- a/template/signup.hbs
+++ b/template/signup.hbs
@@ -5,29 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Money Mind</title>
   <link rel="stylesheet" href="signin.css">
-  <link rel="stylesheet" href="landing.css">
 </head>
 <body>
   {{>landingHeader
     homeLink='/'
   }}
 
-  <div class="container">
+<div class="container">
   <form id="signupForm">
-    <h3>Signup to MoneyMind</h3>
+    <h2>Signup to MoneyMind</h2>
+    <p>Track smart,spend wisely</p>
     <input placeholder="Email" name="email" type="text" id="email" required>
     <br>
     <input placeholder="Password" name="password" type="password" id="password" required>
     <br>
     <input class="sub" type="submit" value="Signup">
     <p id="message"></p>
-    <h3 style="display: inline;">Already have an account?</h3>
+    <p style="display: inline;">Already have an account?</p>
     <a href="/signin">Signin</a>
   </form>
   
   </div>
   
-  <!-- Placeholder for error/success messages -->
+
   
 
 
