--- a/public/landing.css
+++ b/public/landing.css
@@ -1,43 +1,5 @@
-html, body {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-margin: 0;
-padding: 0;
-}
 
-header {
-height: 110px; 
-background-color: rgb(255, 255, 255);
-position: fixed;
-display:flex;
-width: 100%;
-box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
-}
-.logobar{
-  flex: 1;
 
-}
- .navbar {
-    flex: 1;
-  
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.navbar ul {
-  display: flex;
-  list-style: none;
-}
-
-.navbar ul li a{
-  font-size: 20px;
-  margin-right: 20px; /* Space between each item */
-  text-decoration: none;
-  color: black;
-}
-.navbar ul li a:hover {
-  text-decoration: underline;
-}
 
 
 .hero-section {
@@ -62,91 +24,25 @@ box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
   margin: 20px 0;
 }
 .cta-btn {
-  background-color: #ff6347;
+  background-color: #1b41e9;
   border: none;
   color: white;
   padding: 15px 30px;
   font-size: 1.2em;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 30px;
 }
 .cta-btn:hover {
-  background-color: #ff4500;
-}
-.features {
-  padding: 50px 0;
-  text-align: center;
-}
-
-.feature-cards {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-.feature-card {
-  background-color: #ebe4e4;
-  text-align: center;
-  color:black;
-  width: 30%;
-  padding: 20px;
-  margin: 10px;
-  border-radius: 8px;
-  border:solid;
-  border-width:1px;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
-}
-.feature-card h4 {
-  font-size: 1.5em;
-  margin-bottom: 15px;
-  color: black;
+  background-color: #4863de;
 }
 
 
-.footer{
-  background-color: #ebe4e4;
-  color: rgb(0, 0, 0);
-  padding: 20px 0;
-  text-align: center;
-}
-.footer a {
-  color: #000000;
-  text-decoration: none;
-}
-.footer a:hover {
-  color: #000000;
-}
 
 
-/* Media Queries for responsiveness */
+
+
 @media (max-width: 768px) {
-  img{
-    width:200px;
-  }
-
-  header {
-    flex-direction: column;
-    height: 120px;
-    }
-    .logobar{
-      flex: 1;
-      display: flex;
-      justify-content: center;
-    }
-     .navbar {
-        height:30px;
-        flex: 1;
-        display: flex;
-        justify-content: center;
-    }
-    
-
-    
-    .navbar ul li a{
-      font-size: 15px;
-    
-    }
- 
-/* Hero section heading */
+  
 .hero-section h2 {
   font-size: 35px;
 }
