--- a/template/landing.hbs
+++ b/template/landing.hbs
@@ -6,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Money Mind</title>
     <link rel="stylesheet" href="landing.css">
-   
-
-
-
 </head>
 <body id="home">
 
@@ -20,9 +16,9 @@
 
     <section class="hero-section">
         <div>
-            <h2>Track Your Spending Effortlessly</h2>
-            <p>Monitor, analyze, and take control of your finances with ease.</p>
-            <button class="cta-btn" onclick="window.location.href='/signin'">Start Tracking</button>
+            <h2>Managing Finances Made Easy</h2>
+            <p>Create a new account and keep a track record of all your finances, transactions and subscriptions.</p>
+            <button class="cta-btn" onclick="window.location.href='/signin'">Get Started ></button>
         </div>
     </section>
 
