--- a/template/partials/features.hbs
+++ b/template/partials/features.hbs
@@ -1,3 +1,34 @@
+<style>
+    .features {
+  padding: 50px 0;
+  text-align: center;
+}
+
+.feature-cards {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.feature-card {
+  background-color: #ebe4e4;
+  text-align: center;
+  color:black;
+  width: 30%;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 8px;
+  border:solid;
+  border-width:1px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+}
+.feature-card h4 {
+  font-size: 1.5em;
+  margin-bottom: 15px;
+  color: black;
+}
+
+</style>
+
     <section class="features"></section>
         <h1 style="text-align: center;">Why Use Money Mind?</h1>
         <div class="feature-cards">
