--- a/template/partials/footer.hbs
+++ b/template/partials/footer.hbs
@@ -1,23 +1,28 @@
+<style>
+    .footer{
+  background-color: #ebe4e4;
+  color: rgb(0, 0, 0);
+  padding: 20px 0;
+  text-align: center;
+}
+.footer a {
+  color: #000000;
+  text-decoration: none;
+}
+.footer a:hover {
+  color: #000000;
+}
+</style>
 
-   <section id="privacy-policy" class="footer">
-        <h3>Privacy Policy</h3>
-        <p>Your data is safe with us. We respect your privacy and do not share your information with third parties.</p>
-    </section>
-    <hr>
 
-    <section id="about-us" class="footer">
+
+    <section id="services" class="footer">
         <h3>About Us</h3>
         <p>Expense Tracker is dedicated to helping you manage your finances with ease. Our mission is to make budgeting stress-free.</p>
     </section>
-<hr>
-    <section id="contact-us" class="footer">
-        <h3>Contact Us</h3>
-        <p>If you have any questions, feel free to <a href="mailto:support@expensetracker.com">contact us</a>.</p>
-    </section>
-<hr>
 
 
 <footer class="footer">
   <hr>
-  <p>&copy; 2024 Expense Tracker. All rights reserved.</p>
+  <p>&copy; 2024 MoneyMind. All rights reserved.</p>
 </footer>
