--- a/template/partials/homeHeader.hbs
+++ b/template/partials/homeHeader.hbs
@@ -1,5 +1,81 @@
-<header>
+<style>
+  html, body {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+margin: 0;
+padding: 0;
+}
+  header {
+height: 110px; 
+background-color: rgb(255, 255, 255);
+position: fixed;
+display:flex;
+width: 100%;
+box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+}
+.logobar{
+  flex: 1;
+
+}
+ .navbar {
+    flex: 1;
   
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+.navbar ul li a{
+  font-size: 20px;
+  margin-right: 20px; /* Space between each item */
+  text-decoration: none;
+  color: black;
+}
+.navbar ul li a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  img{
+    width:200px;
+  }
+
+  header {
+    flex-direction: column;
+    height: 120px;
+    }
+    .logobar{
+      flex: 1;
+      display: flex;
+      justify-content: center;
+    }
+     .navbar {
+        height:30px;
+        flex: 1;
+        display: flex;
+        justify-content: center;
+    }
+    
+
+    
+    .navbar ul li a{
+      font-size: 15px;
+    
+    }
+ 
+
+
+}
+
+</style>
+
+
+
+<header>
     <div class="logobar">
       <a href="{{homeLink}}">
       <img src="images/moneymind2.png" alt="Money Mind Logo" width="200px;">
