--- a/template/signin.hbs
+++ b/template/signin.hbs
@@ -5,17 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Money Mind</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="signin.css">
-    <link rel="stylesheet" href="landing.css">
-    <style>
-        body,html{
-            padding:0;
-            margin:0;
-        }
-    
-     </style>
 </head>
-<body id="home">
+<body id="home" class="roboto-regular">
 
     {{> landingHeader
         homeLink="/" 
@@ -24,17 +19,18 @@
 
     <div class="container">
         
-    <form id="signinform">
-        <h3>Login to your account</h3>
-        <input placeholder="Email" name="email" type="text" id="email" required>
-        <br>
-        <input placeholder="Password" name="password" type="password" id="password" required>
-        <br>
-        <input class="sub" type="submit" value="Signin">
-        <p id="message"></p>
-        <h3 style="display: inline;">don't have an account?</h3>
-        <a href="/signup">Signup</a>
-    </form>
+        <form id="signinform">
+            <h2>Sign in</h2>
+            <p>stay updated on your expenses</p>
+            <input placeholder="Email" name="email" type="text" id="email" required>
+            <br>
+            <input placeholder="Password" name="password" type="password" id="password" required>
+            <br>
+            <input class="sub" type="submit" value="Signup">
+            <p id="message"></p>
+            <p style="display: inline;">don't have an account?</p>
+            <a href="/signup">Signup</a>
+        </form>
     </div>
 
 
