"chages in signup"

--- a/template/signup.hbs
+++ b/template/signup.hbs
@@ -45,7 +45,7 @@
 
   <form id="otpForm" style="display:none;">
     <h2>Enter your otp</h2>
-     <p>OTP has been sent to the given email address</p>
+     <p>We’ve sent an OTP to your email address</p>
     <input placeholder="Enter otp" name="otp" type="text" id="otp" required>
     <br>
     <input class="sub" type="submit" value="verify otp">
